# tf-hlo-trace

./: .gitmodules  CMakeLists.txt  requirements_dev.txt  setup.py  setup_dev.sh  tensorflow_package_path.py
build_tools/: FindTensorFlow.cmake  build_tensorflow_cc.py
src/tf_hlo_trace/: __ini__.py  tf_hlo_trace_lib.cpp  tf_hlo_trace_lib.hpp  tf_hlo_trace_py_ext.cpp
tests/: CMakeLists.txt  multi_instuction.hlo  multi_instuction_hlo.pb  tf_hlo_trace_test.cpp  tf_hlo_trace_test.py
